# duckdb

./: .bazelrc  BUILD.bazel  MODULE.bazel
src/function/table/version/: pragma_version.cpp
src/main/extension/: extension_install.cpp
